refactor: change Collector to toList method